# sim-compare

./: .gitignore  AGENTS.md  README.md  perf_aos_rs_p_chunk_grid_large.tsv  perf_aos_rs_p_chunk_grid_middle.tsv  perf_aos_rs_p_chunk_grid_small.tsv  perf_aos_rs_serial_large.tsv  perf_aos_rs_serial_middle.tsv  perf_aos_rs_serial_small.tsv  perf_bevy_rs_p_chunk_grid_large.tsv  perf_bevy_rs_p_chunk_grid_middle.tsv  perf_bevy_rs_p_chunk_grid_small.tsv  perf_bevy_rs_serial_large.tsv  perf_bevy_rs_serial_middle.tsv  perf_bevy_rs_serial_small.tsv  perf_hecs_rs_p_chunk_grid_large.tsv  perf_hecs_rs_p_chunk_grid_middle.tsv  perf_hecs_rs_p_chunk_grid_small.tsv  perf_hecs_rs_serial_large.tsv  perf_hecs_rs_serial_middle.tsv  perf_hecs_rs_serial_small.tsv  perf_soa_rs_p_chunk_grid_large.tsv  perf_soa_rs_p_chunk_grid_middle.tsv  perf_soa_rs_p_chunk_grid_small.tsv  perf_soa_rs_serial_large.tsv  perf_soa_rs_serial_middle.tsv  perf_soa_rs_serial_small.tsv  perf_summary.md  perf_summary_go.md  run.sh  run_large.sh  run_middle.sh  run_small.sh  scenario.json  scenario_middle.json  scenario_small.json  simulation_outline.md
aos_cpp/: CMakeLists.txt  README.md
aos_cpp/include/: aos_simulation.hpp  aos_storage.hpp  geo.hpp  logging.hpp  simulation.hpp  spatial_hash.hpp
aos_cpp/include/jsonobj/: detection_event.hpp  detonation_event.hpp
aos_cpp/src/: aos_simulation.cpp  logging.cpp  main.cpp  simulation.cpp  spatial_hash.cpp
aos_go/: log.go  main.go  sim.go  spatial.go  spawn.go
aos_go_p/: go.mod  log.go  main.go  parallel.go
aos_rs/: Cargo.toml
aos_rs/src/: geo.rs  log.rs  main.rs  sim.rs  spatial.rs  spawn.rs
aos_rs_p/: Cargo.toml
aos_rs_p/src/: log.rs  main.rs  sim.rs  spatial.rs  spawn.rs
ark_go/: go.mod  go.sum  log.go  main.go  sim.go  spatial.go  spawn.go
ark_go_p/: geo.go  go.mod  main.go  parallel.go  sim.go
bevy_rs/: Cargo.toml
bevy_rs/src/: log.rs  main.rs  sim.rs  spatial.rs  spawn.rs
bevy_rs_p/: Cargo.toml
bevy_rs_p/src/: geo.rs  main.rs  scenario.rs  sim.rs
donburi_go/: log.go  main.go  sim.go  spawn.go
donburi_go_p/: go.mod  go.sum  main.go  parallel.go  sim.go  spawn.go
entt_cpp/: CMakeLists.txt  README.md
entt_cpp/include/: ecs_components.hpp  ent_simulation.hpp  geo.hpp  logging.hpp  route.hpp  spatial_hash.hpp
entt_cpp/include/jsonobj/: detection_event.hpp  detonation_event.hpp  scenario.hpp  timeline.hpp
entt_cpp/src/: ent_simulation.cpp  geo.cpp  logging.cpp  main.cpp  route.cpp  spatial_hash.cpp
hecs_rs/: Cargo.toml
hecs_rs/src/: log.rs  main.rs  sim.rs  spawn.rs
hecs_rs_p/: Cargo.toml
hecs_rs_p/src/: log.rs  main.rs  sim.rs  spatial.rs  spawn.rs
oop_cpp/: CMakeLists.txt  README.md  attacker_object.cpp  attacker_object.hpp  class_design.md  commander_object.hpp  detection_event.hpp  detonation_event.hpp  fixed_object.cpp  fixed_object.hpp  geo.cpp  geo.hpp  loggin.cpp  loggin.hpp  logging.cpp  logging.hpp  main.cpp  messenger_object.cpp  messenger_object.hpp  movable_object.cpp  movable_object.hpp  route.cpp  route.hpp  scenario.hpp  scout_object.cpp  scout_object.hpp  sim_object.cpp  sim_object.hpp  simulation.cpp  simulation.hpp  spatial_hash.cpp  spatial_hash.hpp  timeline.hpp
oop_cpp/include/: attacker_object.hpp  commander_object.hpp  detonation_event.hpp  logging.hpp  messenger_object.hpp  movable_object.hpp  route.hpp  scout_object.hpp  sim_object.hpp  simulation.hpp  timeline.hpp
oop_cpp/src/: attacker_object.cpp  commander_object.cpp  fixed_object.cpp  logging.cpp  main.cpp  messenger_object.cpp  movable_object.cpp  scout_object.cpp  simulation.cpp
oop_cpp/tests/: test_attacker_object.cpp  test_commander_object.cpp  test_fixed_object.cpp  test_messenger_object.cpp  test_movable_object.cpp  test_scout_object.cpp  test_sim.cpp
perf_logs/aos_rs_p_large_t4/: sim_c512.txt  time_c512.txt
perf_logs/aos_rs_p_large_t8/: sim_c128.txt  sim_c256.txt  sim_c512.txt  time_c128.txt  time_c256.txt  time_c512.txt
perf_logs/bevy_rs_p/: sim_large_t2_c128.txt  sim_large_t2_c256.txt  sim_large_t2_c512.txt  sim_large_t4_c128.txt  sim_large_t4_c256.txt  sim_large_t4_c512.txt  sim_large_t8_c128.txt  sim_large_t8_c256.txt  sim_large_t8_c512.txt  sim_middle_t2_c128.txt  sim_middle_t2_c256.txt  sim_middle_t2_c512.txt  sim_middle_t4_c128.txt  sim_middle_t4_c256.txt  sim_middle_t4_c512.txt  sim_middle_t8_c128.txt  sim_middle_t8_c256.txt  sim_middle_t8_c512.txt  (+40 more)
schemas/: detection_event.schema.json  detonation_event.schema.json  scenario.schema.json  timeline.schema.json
sim-tools/: README.md  logviewer.py  requirements.txt  scenario.py
soa_cpp/: CMakeLists.txt  README.md
soa_cpp/include/: logging.hpp  route.hpp  simulation.hpp  soa_simulation.hpp  soa_storage.hpp  spatial_hash.hpp
soa_cpp/include/jsonobj/: timeline.hpp
soa_cpp/src/: geo.cpp  logging.cpp  main.cpp  route.cpp  simulation.cpp  soa_simulation.cpp  spatial_hash.cpp
soa_go/: log.go  main.go  sim.go  spawn.go
soa_go_p/: go.mod  main.go  parallel.go  scenario.go  sim.go
soa_rs/: Cargo.toml
soa_rs_p/: Cargo.toml
(+151 files in other folders)
